# linkedin-mcp-analyzer

./: .ai_state.json  .gitignore  LICENSE  README.md  ai_state.json  linkedin-mcp.bat  pyproject.toml
.github/workflows/: ci.yml  weekly-scrape.yml
docs/: analyza_obscura_outpost2026.md  audit_analyza_a_playbook_v0.2.0.docx  audit_linkedin_mcp_custom_v0.1.0.docx  audit_linkedin_mcp_custom_v0.1.0.md  audit_prompt_linkedin_mcp_custom.md  eroi_metodologie_deep_dive.md  error_analysis_20260715_194245.json  marginalni_analyza_v2.md  pipeline_20260707_190730.json  pipeline_20260707_190730.md  pipeline_20260709_084318.json  pipeline_20260709_084318.md  pitevni_kniha_v1.md  plan_v2_integrace.md  scrape_test_20260707_report.md  scrape_test_report_20260707_174728.json  session_7_anomalies_2026-07-09.md  session_8_anomalies_2026-07-09.md  session_9_anomalies_2026-07-09.md  transfer_znalosti_obscura_outpost2026.md  universal_eroi_mcp_plan.md
scripts/: dedup_migration.py  export_cookies.py  gen_audit_playbook.py  rebuild_report.py  rebuild_report_from_pipeline.py  run_pipeline.py  test_scrape.py
src/linkedin_mcp_custom/: __init__.py  __main__.py  cli.py  config.py  server.py
src/linkedin_mcp_custom/analysis/: __init__.py  config.py  domain.py  formal.py  growth.py  kb_writer.py  location.py  report_generator.py  role.py  schemas.py  scorer.py  tech.py
tests/: test_auth.py  test_batch_pipeline.py  test_browser.py  test_eroi_regression.py  test_extractor.py  test_graceful.py  test_interceptor.py  test_kb_writer.py  test_report_generator.py  test_scorer.py  test_ssrf.py
(+13 files in other folders)
