[project]
name = "linkedin-mcp-custom"
version = "0.1.0"
description = "LinkedIn saved jobs analysis MCP server with EROI scoring and KB write-back"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "patchright>=1.40.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
linkedin-mcp = "linkedin_mcp_custom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_mcp_custom"]

[tool.uv]
package = true
